--- a/src/index.html
+++ b/src/index.html
@@ -15,33 +15,35 @@
     />
     <link rel="stylesheet" href="https://use.typekit.net/iei0xqi.css" />
   </head>
-  <body
-    class="cursor-mincursor active:cursor-mincurserclik [&_p]:text-lg"
-
-  >
-  <main class="overflow-clip">
-    <div class="bg-brun [&_h2]:text-beige"
-    style="background-image: url(img/background-50.png);
-    background-size: cover;"
-    >
-      <!-- section 1-->
-      <section>
-        <div class="container min-w-fit">
-          <img
-            src="img/heroimg.webp"
-            alt="hero_img"
-            class="h-screen w-screen"
-          />
-          <h1 class="centered text-5xl font-extrabold text-brun">
-            Uperfekt er perfekt
-          </h1>
-        </div>
-      </section>
+  <body class="cursor-mincursor active:cursor-mincurserclik [&_p]:text-lg">
+    <main class="overflow-clip">
+      <div
+        class="bg-brun [&_h2]:text-beige"
+        style="
+          background-image: url(img/background-50.png);
+          background-size: cover;
+        "
+      >
+        <!-- section 1-->
+        <section>
+          <div class="container min-w-fit">
+            <img
+              src="img/heroimg.webp"
+              alt="hero_img"
+              class="h-screen w-screen"
+            />
+            <h1 class="centered text-5xl font-extrabold text-brun">
+              Uperfekt er perfekt
+            </h1>
+          </div>
+        </section>
 
         <!-- section 2-->
         <section>
-          <div class="grid h-screen w-screen place-content-center scrollzoomimg3">
-            <h2 class="text-5xl font-bold scrollzoom3">Pierre Falcke</h2>
+          <div
+            class="scrollzoomimg3 grid h-screen w-screen place-content-center"
+          >
+            <h2 class="scrollzoom3 text-5xl font-bold">Pierre Falcke</h2>
           </div>
 
           <div class="container min-w-fit">
@@ -55,20 +57,20 @@
             </h3>
           </div>
           <div>
-            <div class="grid grid-cols-4 h-screen place-content-center">
-             <p class="text-beige col-start-2 col-end-4">
-              Men indtil for kort tid siden, så du hans værker et par gange om
-              dagen, hver dag, året rundt. Pierre Falcke var en af verdens bedst
-              sælgende stock-fotografer, og han solgte over 2 millioner fotos om
-              året. Men Pierre kunne ikke drømme om at bruge sine egne fotos -
-              faktisk kan han ikke fordrage sit eget arbejde.
-             </p>
+            <div class="grid h-screen grid-cols-4 place-content-center">
+              <p class="col-start-2 col-end-4 text-beige">
+                Men indtil for kort tid siden, så du hans værker et par gange om
+                dagen, hver dag, året rundt. Pierre Falcke var en af verdens
+                bedst sælgende stock-fotografer, og han solgte over 2 millioner
+                fotos om året. Men Pierre kunne ikke drømme om at bruge sine
+                egne fotos - faktisk kan han ikke fordrage sit eget arbejde.
+              </p>
             </div>
-            <ul
-              class="inview text-center text-2xl font-semibold text-gul"
-            >
+            <ul class="inview text-center text-2xl font-semibold text-gul">
               <li class="py-7">Pierre sælger 2 millioner fotos om året.</li>
-              <li class="py-7">Det svarer til én fotolicens hvert 16. sekund.</li>
+              <li class="py-7">
+                Det svarer til én fotolicens hvert 16. sekund.
+              </li>
               <li class="py-7">Du ser hans fotos ca. 2 gange om dagen.</li>
             </ul>
           </div>
@@ -78,46 +80,44 @@
         <div class="grid h-screen place-content-center">
           <a
             href="#section3"
-            class="inline-block myScale text-3xl text-gul hover:cursor-mincursor active:cursor-mincurserclik"
+            class="myScale inline-block text-3xl text-gul hover:cursor-mincursor active:cursor-mincurserclik"
           >
             Læs mere om stock-fotos!</a
           >
         </div>
-        
-        <section
-          id="section3"
-        >
-        <div class=" sticky top-0 h-screen" >
-          <img  src="img/stockimg.webp" alt="stockimg">
-        </div>
-        <div class="grid grid-cols-4 ">
-          <div class="parallaxcontainer h-screen col-start-2 col col-end-4">
-            <p class="bg-beige p-5">
-              Stock-fotos er billeder, der kan købes fra et foto-website. De
-              bruges af aviser, til markedsføring og som indhold på websites. En
-              licens til at bruge et foto koster typisk mellem 10 og 100 kroner,
-              alt afhængig af hvad de skal bruges til.
-            </p>
-          </div>
 
-          <div class="parallaxcontainer h-screen col-start-2 col col-end-4">
-            <p class="bg-beige p-5">
-              Stock-fotos bliver ofte kritiseret for at være uden sjæl - det er
-              de der billeder af en læge i hvid kittel med stetoskop om halsen
-              på en meget hvid baggrund eller en meget glad dame fra
-              virksomhedens salgs- eller supportafdeling.
-            </p>
+        <section id="section3">
+          <div class="sticky top-0 h-screen">
+            <img src="img/stockimg.webp" alt="stockimg" />
           </div>
+          <div class="grid grid-cols-4">
+            <div class="parallaxcontainer col col-start-2 col-end-4 h-screen">
+              <p class="bg-beige p-5">
+                Stock-fotos er billeder, der kan købes fra et foto-website. De
+                bruges af aviser, til markedsføring og som indhold på websites.
+                En licens til at bruge et foto koster typisk mellem 10 og 100
+                kroner, alt afhængig af hvad de skal bruges til.
+              </p>
+            </div>
 
-          <div class="parallaxcontainer h-screen col-start-2 col col-end-4">
-            <p class="bg-beige p-5">
-              Stock-fotos har eksisteret i mange år. Før branchen blev digital,
-              tilbød stock-foto virksomhederne billedmapper, der kunne bestilles
-              fra. Men stock-foto branchen var én af de tidlige til at blive
-              fuldt digitaliseret.
-            </p>
+            <div class="parallaxcontainer col col-start-2 col-end-4 h-screen">
+              <p class="bg-beige p-5">
+                Stock-fotos bliver ofte kritiseret for at være uden sjæl - det
+                er de der billeder af en læge i hvid kittel med stetoskop om
+                halsen på en meget hvid baggrund eller en meget glad dame fra
+                virksomhedens salgs- eller supportafdeling.
+              </p>
+            </div>
+
+            <div class="parallaxcontainer col col-start-2 col-end-4 h-screen">
+              <p class="bg-beige p-5">
+                Stock-fotos har eksisteret i mange år. Før branchen blev
+                digital, tilbød stock-foto virksomhederne billedmapper, der
+                kunne bestilles fra. Men stock-foto branchen var én af de
+                tidlige til at blive fuldt digitaliseret.
+              </p>
+            </div>
           </div>
-        </div>
         </section>
 
         <!-- section 4-->
@@ -143,12 +143,14 @@
             de store, etablerede spillere på markedet holdt lidt igen. Pierre så
             det for sig:
           </p>
-          <div class="mx-auto overflow-clip scrollzoomimg2 w-full">
-          <h3 class="mt-32 mb-32 text-center text-lg italic text-beige scrollzoom2">
-            “Om ganske få år er hele branchen digital, og dem der ikke hopper
-            med på den digitale vogn, lukker.”
-          </h3>
-        </div>
+          <div class="scrollzoomimg2 mx-auto w-full overflow-clip">
+            <h3
+              class="scrollzoom2 mt-32 mb-32 text-center text-lg italic text-beige"
+            >
+              “Om ganske få år er hele branchen digital, og dem der ikke hopper
+              med på den digitale vogn, lukker.”
+            </h3>
+          </div>
           <p class="mb-52 text-beige">
             Så Pierre gav sig selv en udfordring: At blive landets bedst
             sælgende stock-fotograf. Pierre lejede et gammelt, billigt
@@ -183,9 +185,11 @@
             fotos. Noget han kunne lave med stolthed. Pierre bestluttede sig for
             at droppe stock-fotos, og vende tilbage til rødderne.
           </p>
-          <div class="grid grid-cols-2 mx-auto scrollzoom overflow-clip scrollzoomimg w-full">
-            <img src="img/enskillevej1.webp" alt="img1"/>
-            <img src="img/enskillevej2.webp" alt="img2"/>
+          <div
+            class="scrollzoom scrollzoomimg mx-auto grid w-full grid-cols-2 overflow-clip"
+          >
+            <img src="img/enskillevej1.webp" alt="img1" />
+            <img src="img/enskillevej2.webp" alt="img2" />
           </div>
           <p class="leading-loose">
             Han søgte inspiration i analog fotografering, i Lomo-bevægelsen,
@@ -200,14 +204,14 @@
             forretningsdrivende til at blive en vaskeægte boheme-type på
             rekordtid.
           </p>
-          <section id="horisontalscrollsection" class="relative h-[500vh]" >
+          <section id="horisontalscrollsection" class="relative h-[500vh]">
             <ul id="horisontalliste" class="sticky top-0 flex list-none">
               <li
                 class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
-                  class="h-[400px] w-[600px]"
-                  src="img/slide1.webp"
+                  class="h-[500px] w-[430px]"
+                  src="img/slide_1_polaroid.webp"
                   alt="foto"
                 />
               </li>
@@ -215,8 +219,8 @@
                 class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
-                  class="h-[400px] w-[600px]"
-                  src="img/silde2.webp"
+                  class="h-[500px] w-[430px]"
+                  src="img/slide_2_polaroidwebp.webp"
                   alt="foto"
                 />
               </li>
@@ -224,8 +228,8 @@
                 class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
-                  class="h-[400px] w-[600px]"
-                  src="img/slide3.webp"
+                  class="h-[500px] w-[430px]"
+                  src="img/slide_3_polaroid.webp"
                   alt="foto"
                 />
               </li>
@@ -233,8 +237,8 @@
                 class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
-                  class="h-[400px] w-[600px]"
-                  src="img/slide4.webp"
+                  class="h-[500px] w-[430px]"
+                  src="img/slide_4_polaroid.webp"
                   alt="foto"
                 />
               </li>
@@ -242,8 +246,8 @@
                 class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
-                  class="h-[400px] w-[600px]"
-                  src="img/slide5.webp"
+                  class="h-[500px] w-[430px]"
+                  src="img/slide_5_polaroid.webp"
                   alt="foto"
                 />
               </li>
@@ -264,16 +268,15 @@
               alt="info"
               class="mx-auto w-2/3 p-10"
             />
-            
           </div>
           <div class="md:w-100 sticky top-0 grid h-screen">
             <h3
-              class="sticky mx-auto mt-28 md:w-1/2 p-10 text-center text-xl font-bold"
+              class="sticky mx-auto mt-28 p-10 text-center text-xl font-bold md:w-1/2"
             >
               Analog fotografering
             </h3>
             <p
-              class="sticky mx-auto mb-48 md:w-1/2 max-w-md bg-slate-50 bg-opacity-60 p-5 text-sm"
+              class="sticky mx-auto mb-48 max-w-md bg-slate-50 bg-opacity-60 p-5 text-sm md:w-1/2"
             >
               Fotografering med gode, gammeldags filmruller. Analog
               fotografering stiger for tiden i popularitet, specielt blandt
@@ -337,15 +340,21 @@
             </p>
           </div>
           <div class="w-100 sticky top-0 flex h-screen items-center">
-            <img src="img/lomo_regler.jpg" alt="Lomografi" class="mx-auto w-1/2 p-10 bg-slate-50">
-            </div>
-            <div class="w-100 sticky top-0 grid h-screen items-center">
-              <h3
-                class="sticky mx-auto mt-28 w-1/2 p-10 text-center text-xl font-bold"
-              >
-                Lomoregler
-              </h3>
-              <ul class="sticky mx-auto mb-48 w-1/2 max-w-md bg-slate-50 bg-opacity-60 p-5 text-sm list-disc">
+            <img
+              src="img/lomo_regler.jpg"
+              alt="Lomografi"
+              class="mx-auto w-1/2 bg-slate-50 p-10"
+            />
+          </div>
+          <div class="w-100 sticky top-0 grid h-screen items-center">
+            <h3
+              class="sticky mx-auto mt-28 w-1/2 p-10 text-center text-xl font-bold"
+            >
+              Lomoregler
+            </h3>
+            <ul
+              class="sticky mx-auto mb-48 w-1/2 max-w-md list-disc bg-slate-50 bg-opacity-60 p-5 text-sm"
+            >
               <li>Tag kameraet med overalt</li>
               <li>Brug det på alle tidspunkter – dag og nat</li>
               <li>
@@ -359,7 +368,7 @@
               <li>Heller ikke efter</li>
               <li>Du skal ikke bekymre dig om nogen regler</li>
             </ul>
-            </div>
+          </div>
         </section>
 
         <!-- section 7-->
@@ -369,39 +378,43 @@
             <h2 class="text-4xl font-bold text-brun">En ny begyndelse</h2>
           </div>
           <video autoplay muted loop class="sticky top-0">
-            <source class="h-screen w-screen" src="video14sec.mp4" type="video/mp4" />
+            <source
+              class="h-screen w-screen"
+              src="video14sec.mp4"
+              type="video/mp4"
+            />
           </video>
           <div class="grid grid-cols-4 text-beige">
-<div class="sticky top-0 h-screen col-start-2 col-end-4">
-  <p>
-    Men Pierre er glad for sin beslutning. Indkomsten er lavere nu, men han har stadig 
-    lidt penge på kontoen, og studerer nu kunstfotografering på fotoskolen Fatamorgana. 
-    Han glæder sig over hver dags kunstneriske eksperimenter, og er for første gang i sit 
-    liv rigtig stolt af sit arbejde. Som Pierre selv udtrykker det: “Det interessante ligger 
-    i fejlen. Et foto med masser af fejl er interessant. Jeg eksperimenterer med udstyr og teknik, 
-    og skaber nye visuelle udtryk. Det uperfekte er perfekt.”
-
-  </p>
-</div>
-<div class="sticky top-1 h-screen col-start-2 col-end-4">
-  <p>
-    Karrieren begynder også så småt også at gå den 
-    rette vej: Pierre er begyndt at sælge fotokunst på nettet, 
-    og har udgivet sin første foto-bog med titlen “Lidt i fem,” 
-    som er en fotografisk odyssé om at slæbe en brandert hjem i de tidlige morgentimer.
-     I forbindelse med udgivelsen af bogen, har han en udstilling på vej i det Kongelige
-      Biblioteks fotoudstilling.
-
-  </p>
-</div>
-<div class="sticky top-2 h-screen col-start-2 col-end-4">
-  <p>
-    Som Pierre forklarer det:
-  </p>
-  <q>“Nu kan jeg leve livet igen. Jeg føler mig frisk. Jeg føler mig fri. Jeg føler mig genfødt.”</q>
-</div>
-</div>
-
+            <div class="sticky top-0 col-start-2 col-end-4 h-screen">
+              <p>
+                Men Pierre er glad for sin beslutning. Indkomsten er lavere nu,
+                men han har stadig lidt penge på kontoen, og studerer nu
+                kunstfotografering på fotoskolen Fatamorgana. Han glæder sig
+                over hver dags kunstneriske eksperimenter, og er for første gang
+                i sit liv rigtig stolt af sit arbejde. Som Pierre selv udtrykker
+                det: “Det interessante ligger i fejlen. Et foto med masser af
+                fejl er interessant. Jeg eksperimenterer med udstyr og teknik,
+                og skaber nye visuelle udtryk. Det uperfekte er perfekt.”
+              </p>
+            </div>
+            <div class="sticky top-1 col-start-2 col-end-4 h-screen">
+              <p>
+                Karrieren begynder også så småt også at gå den rette vej: Pierre
+                er begyndt at sælge fotokunst på nettet, og har udgivet sin
+                første foto-bog med titlen “Lidt i fem,” som er en fotografisk
+                odyssé om at slæbe en brandert hjem i de tidlige morgentimer. I
+                forbindelse med udgivelsen af bogen, har han en udstilling på
+                vej i det Kongelige Biblioteks fotoudstilling.
+              </p>
+            </div>
+            <div class="sticky top-2 col-start-2 col-end-4 h-screen">
+              <p>Som Pierre forklarer det:</p>
+              <q
+                >“Nu kan jeg leve livet igen. Jeg føler mig frisk. Jeg føler mig
+                fri. Jeg føler mig genfødt.”</q
+              >
+            </div>
+          </div>
         </section>
       </div>
 
@@ -418,11 +431,9 @@
     </main>
 
     <footer class="bg-gul text-brun">
-      <div class="py-7 flex place-content-center">
-        <p class="pr-3">
-          Student project by Ida, Mathea & Evelina  
-        </p>
-        <p class="border-l-2 pl-3 border-brun">Multimedia design at kea 2022</p>
+      <div class="flex place-content-center py-7">
+        <p class="pr-3">Student project by Ida, Mathea & Evelina</p>
+        <p class="border-l-2 border-brun pl-3">Multimedia design at kea 2022</p>
       </div>
     </footer>
   </body>
