--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
             at droppe stock-fotos, og vende tilbage til rødderne.
           </p>
           <div
-            class="scrollzoom scrollzoomimg mx-auto grid w-full grid-cols-2 overflow-clip"
+            class="scrollzoom scrollzoomimg mx-auto grid w-full grid-cols-2 overflow-clip mb-96"
           >
             <img src="img/enskillevej1.webp" alt="img1" />
             <img src="img/enskillevej2.webp" alt="img2" />
@@ -266,17 +266,18 @@
             <img
               src="img/infoanalog.webp"
               alt="info"
-              class="mx-auto w-2/3 p-10"
+              class="mx-auto max-h-screen w-auto md:w-2/3 md:p-10"
             />
           </div>
           <div class="md:w-100 sticky top-0 grid h-screen">
             <h3
-              class="sticky mx-auto mt-28 p-10 text-center text-xl font-bold md:w-1/2"
+              class="sticky mx-auto mt-40 p-10 text-center text-xl font-bold md:w-1/2"
             >
               Analog fotografering
             </h3>
+            <div class="grid h-screen grid-cols-4 place-content-center">
             <p
-              class="sticky mx-auto mb-48 max-w-md bg-slate-50 bg-opacity-60 p-5 text-sm md:w-1/2"
+              class="sticky col-start-2 col-end-4 text-xs mx-auto mb-96 bg-slate-50 bg-opacity-60 p-5 md:text-sm"
             >
               Fotografering med gode, gammeldags filmruller. Analog
               fotografering stiger for tiden i popularitet, specielt blandt
@@ -293,21 +294,23 @@
               processer under fremkaldelse af filmen.
             </p>
           </div>
+          </div>
           <div class="w-100 sticky top-0 flex h-screen items-center">
             <img
               src="img/glitch.webp"
               alt="glitch"
-              class="mx-auto w-2/3 p-10"
+              class="mx-auto max-h-screen w-auto md:w-2/3 md:p-10"
             />
           </div>
           <div class="w-100 sticky top-0 grid h-screen items-center">
             <h3
-              class="sticky mx-auto mt-28 w-1/2 p-10 text-center text-xl font-bold text-beige"
+              class="sticky mx-auto mt-40 p-10 text-center text-xl font-bold md:w-1/2 text-beige"
             >
               Glitch Art
             </h3>
+            <div class="grid h-screen grid-cols-4 place-content-center">
             <p
-              class="sticky mx-auto mb-64 w-1/2 max-w-md bg-slate-50 bg-opacity-60 p-5 text-sm"
+              class="sticky col-start-2 col-end-4 text-xs mx-auto mb-96 bg-slate-50 bg-opacity-60 p-5 md:text-sm"
             >
               Når der sker en teknisk fejl i et medie/en kommunikationskanal
               kaldes det en glitch. Glitch art går ud på at dyrke fejlene for at
@@ -315,22 +318,24 @@
               fejl i farvegengivelsen af billeder.
             </p>
           </div>
+        </div>
           <div class="w-100 sticky top-0 grid h-screen items-center">
             <img
               src="img/lomografi.webp"
               alt="lomo"
-              class="mx-auto w-2/3 p-10"
+              class="mx-auto max-h-screen w-auto md:w-2/3 md:p-10"
             />
           </div>
           <div class="w-100 sticky top-0 grid h-screen items-center">
             <h3
-              class="sticky mx-auto mt-28 w-1/2 p-10 text-center text-xl font-bold"
+              class="sticky mx-auto mt-40 w-1/2 p-10 text-center text-xl font-bold"
             >
               Lomografi
             </h3>
-            <p
-              class="sticky mx-auto mb-64 w-1/2 max-w-md bg-slate-50 bg-opacity-60 p-5 text-sm"
-            >
+            <div class="grid h-screen grid-cols-4 place-content-center">
+              <p
+                class="sticky col-start-2 col-end-4 text-xs mx-auto mb-96 bg-slate-50 bg-opacity-60 p-5 md:text-sm"
+              >
               Et lomografi er egentlig bare et fotografi skudt uden videre
               omtanke, og med noget foto-udstyr af ret alternativ kvalitet.
               Lomografier skydes ofte på gode, gammeldags filmruller, men kan
@@ -338,36 +343,7 @@
               Men en del foto-entusiaster dyrker den slags, og ser det som en
               foto-genre eller endda en livsstil.
             </p>
-          </div>
-          <div class="w-100 sticky top-0 flex h-screen items-center">
-            <img
-              src="img/lomo_regler.jpg"
-              alt="Lomografi"
-              class="mx-auto w-1/2 bg-slate-50 p-10"
-            />
-          </div>
-          <div class="w-100 sticky top-0 grid h-screen items-center">
-            <h3
-              class="sticky mx-auto mt-28 w-1/2 p-10 text-center text-xl font-bold"
-            >
-              Lomoregler
-            </h3>
-            <ul
-              class="sticky mx-auto mb-48 w-1/2 max-w-md list-disc bg-slate-50 bg-opacity-60 p-5 text-sm"
-            >
-              <li>Tag kameraet med overalt</li>
-              <li>Brug det på alle tidspunkter – dag og nat</li>
-              <li>
-                Lomografi er ikke en forstyrrelse af dit liv, men en del af det
-              </li>
-              <li>Prøv hofteskuddet!</li>
-              <li>Gå tæt på de objekter du har et ønske om at lomografere</li>
-              <li>Tænk ikke (William Firebrace)</li>
-              <li>Vær hurtig</li>
-              <li>Du behøver ikke at vide hvad du fanger på film på forhånd</li>
-              <li>Heller ikke efter</li>
-              <li>Du skal ikke bekymre dig om nogen regler</li>
-            </ul>
+            </div>
           </div>
         </section>
 
