--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
           <div
             class="scrollzoomimg3 grid h-screen w-screen place-content-center"
           >
-            <h2 class="scrollzoom3 text-5xl font-bold">Pierre Falcke</h2>
+            <h2 class="scrollzoom3 text-5xl font-bold sm:text-3xl">Pierre Falcke</h2>
           </div>
 
           <div class="container min-w-fit">
