--- a/src/index.html
+++ b/src/index.html
@@ -66,12 +66,12 @@
                 egne fotos - faktisk kan han ikke fordrage sit eget arbejde.
               </p>
             </div>
-            <ul class="inview text-center text-2xl font-semibold text-gul h-screen sm:inviewMobile">
-              <li class="py-7">Pierre sælger 2 millioner fotos om året.</li>
-              <li class="py-7">
+            <ul class="inview text-center text-2xl font-semibold text-gul h-screen inviewMobile">
+              <li class="py-7 sm:px-10">Pierre sælger 2 millioner fotos om året.</li>
+              <li class="py-7 sm:px-10">
                 Det svarer til én fotolicens hvert 16. sekund.
               </li>
-              <li class="py-7">Du ser hans fotos ca. 2 gange om dagen.</li>
+              <li class="py-7 sm:px-10">Du ser hans fotos ca. 2 gange om dagen.</li>
             </ul>
           </div>
         </section>
@@ -80,7 +80,7 @@
         
 
         <section>
-          <div class="sticky top-0 h-screen sm:top-[35vh]">
+          <div class="sticky top-0 h-screen md:top-[35vh]">
             <img src="img/stockimg.webp" alt="stockimg" />
           </div>
           <div class="parallaxcontainer h-screen">
@@ -121,7 +121,7 @@
 
         <!-- section 4-->
         <section>
-          <div class="grid h-screen place-content-center pt-80 sm:pt-0">
+          <div class="grid h-screen place-content-center pt-80 md:pt-0 md:h-[50vh]">
             <h2 class="text-center text-5xl font-bold">Pierres berømmelse</h2>
           </div>
           <div class="grid grid-cols-4 pt-20">
@@ -192,7 +192,7 @@
           </p>
         </div>
           <div
-            class="scrollzoom scrollzoomimg grid w-full grid-cols-2 overflow-clip mb-96"
+            class="scrollzoom scrollzoomimg grid w-full grid-cols-2 overflow-clip mb-96 md:mb-20"
           >
             <img src="img/enskillevej1.webp" alt="img1" />
             <img src="img/enskillevej2.webp" alt="img2" />
@@ -215,12 +215,12 @@
         </div>
 
           <section id="horisontalscrollsection" class="relative h-[300vh]">
-            <ul id="horisontalliste" class="sticky top-0 flex list-none pl-32">
+            <ul id="horisontalliste" class="sticky top-0 flex list-none pl-32 xs:gap-10">
               <li
                 class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
-                  class="h-[500px] w-[430px]"
+                  class="h-[500px] w-[430px] md:h-[400px] md:w-[330px] sm:h-[300px] sm:w-[230px]"
                   src="img/slide_1_polaroid.webp"
                   alt="foto"
                 />
@@ -229,7 +229,7 @@
                 class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
-                  class="h-[500px] w-[430px]"
+                  class="h-[500px] w-[430px] md:h-[400px] md:w-[330px] sm:h-[300px] sm:w-[230px]"
                   src="img/slide_2_polaroidwebp.webp"
                   alt="foto"
                 />
@@ -238,7 +238,7 @@
                 class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
-                  class="h-[500px] w-[430px]"
+                  class="h-[500px] w-[430px] md:h-[400px] md:w-[330px] sm:h-[300px] sm:w-[230px]"
                   src="img/slide_3_polaroid.webp"
                   alt="foto"
                 />
@@ -247,7 +247,7 @@
                 class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
-                  class="h-[500px] w-[430px]"
+                  class="h-[500px] w-[430px] md:h-[400px] md:w-[330px] sm:h-[300px] sm:w-[230px]"
                   src="img/slide_4_polaroid.webp"
                   alt="foto"
                 />
@@ -256,7 +256,7 @@
                 class="flex h-[100vh] w-[50vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
               >
                 <img
-                  class="h-[500px] w-[430px]"
+                  class="h-[500px] w-[430px] md:h-[400px] md:w-[330px] sm:h-[300px] sm:w-[230px]"
                   src="img/slide_5_polaroid.webp"
                   alt="foto"
                 />
@@ -429,9 +429,9 @@
     </main>
 
     <footer class="bg-gul text-brun">
-      <div class="flex place-content-center py-7">
-        <p class="pr-3 sm:p-0">Student project by Ida, Mathea & Evelina</p>
-        <p class="border-l-2 border-brun pl-3">Multimedia design at kea 2022</p>
+      <div class="flex place-content-center py-7 sm:flex-col sm:place-items-center">
+        <p class="pr-3 sm:pb-1">Student project by Ida, Mathea & Evelina</p>
+        <p class="border-l-2 border-brun pl-3 sm:border-t-2 sm:border-l-0 sm:pt-1">Multimedia design at kea 2022</p>
       </div>
     </footer>
   </body>
