--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
               alt="hero_img"
               class="w-screen"
             />
-            <h3 class="low text-4xl font-extrabold text-gul sm:pl-10 sm:text-2xl md:pl-20">
+            <h3 class="low text-4xl font-extrabold text-beige sm:pl-10 sm:text-2xl md:pl-20">
               Du ved formentligt ikke hvem han er
             </h3>
           </div>
